# ABRA

./: .gitignore  conftest.py  pyproject.toml  requirements.txt
locators/: login_page_locators.py  variables.py
pages/: base_page.py  login_page.py
tests/: test_login_page.py
tests/.pytest_cache/v/cache/: lastfailed  nodeids
