[tool.poetry]
name = "bdd"
version = "0.1.0"
description = ""
authors = ["IA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.17.2"
pytest = "^8.0.0"
pytest-dotenv = "^0.5.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"